--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amin Rahimi</title>
+    <title>Amin Rahimi Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -523,7 +523,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
-            <a href="#" class="logo">Your Name</a>
+            <a href="#" class="logo">Amin Rahimi</a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
