--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
         <h2 class="section-title">My Projects</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <h3>Project Alpha</h3>
+                <h3>Real Dream</h3>
                 <p>A cutting-edge web application built with React and Node.js. Features real-time data processing and an intuitive user interface.</p>
                 <div class="project-links">
                     <a href="#" class="project-link">Live Demo</a>
@@ -570,7 +570,7 @@
             </div>
 
             <div class="project-card">
-                <h3>Project Beta</h3>
+                <h3>RealVerse</h3>
                 <p>Mobile-first responsive website with advanced animations and smooth user experience. Built using modern CSS techniques and JavaScript.</p>
                 <div class="project-links">
                     <a href="#" class="project-link">Live Demo</a>
@@ -579,7 +579,7 @@
             </div>
 
             <div class="project-card">
-                <h3>Project Gamma</h3>
+                <h3>iCheckOut Store</h3>
                 <p>Full-stack e-commerce platform with secure payment integration, inventory management, and admin dashboard.</p>
                 <div class="project-links">
                     <a href="#" class="project-link">Live Demo</a>
@@ -592,6 +592,15 @@
                 <p>An exciting new project is in development. Stay tuned for updates on this innovative solution that will revolutionize user interaction.</p>
                 <div class="project-links">
                     <a href="#" class="project-link">Preview</a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <h3>Published Books</h3>
+                <h4>Connect & Conquer</h4>
+                <p>In "Connect and Conquer: Mastering Friendship in a Digital Age," discover essential strategies for building meaningful connections in a world dominated by online interactions. This insightful guide explores the importance of effective communication, humor, and empathy in forming diverse friendships, while also addressing the challenges of social anxiety and maintaining long-distance relationships. Empower yourself to foster deeper bonds and create a vibrant social network that transcends physical boundaries.</p>
+                <div class="project-links">
+                    <a href="#" class="https://drive.google.com/file/d/1z30dSGHNkHYE2Piz0DG2SPYmqwLCkZcy/view?usp=sharing">Preview</a>
                 </div>
             </div>
         </div>
