--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 <h4>Connect & Conquer</h4>
                 <p>In "Connect and Conquer: Mastering Friendship in a Digital Age," discover essential strategies for building meaningful connections in a world dominated by online interactions. This insightful guide explores the importance of effective communication, humor, and empathy in forming diverse friendships, while also addressing the challenges of social anxiety and maintaining long-distance relationships. Empower yourself to foster deeper bonds and create a vibrant social network that transcends physical boundaries.</p>
                 <div class="project-links">
-                    <a href="#" class="https://drive.google.com/file/d/1z30dSGHNkHYE2Piz0DG2SPYmqwLCkZcy/view">Preview</a>
+                    <a href="https://drive.google.com/file/d/1z30dSGHNkHYE2Piz0DG2SPYmqwLCkZcy/view" class="project-link">Preview</a>
                 </div>
             </div>
         </div>
